# asr_bench_med50

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  envload.py  pyproject.toml  requirements-gpu.txt  requirements.txt
adapters/: __init__.py  _audio.py  cartesia_api.py  gnani_api.py  indicconformer_local.py  offline_base.py  registry.py  sarvam_api.py  smallest_api.py
app/: server.py
benchmark/: dataset.py  metrics.py  normalize.py  report.py  run.py
bias_terms/: medical_bias_terms.csv
biasing/: glossary.py  llm_postcorrect.py  logit_spike.py  pyctc_boost.py
data/: make_dataset.py  record_clip.py  validate_manifest.py
models/: README.md
results/: results.csv  results.md
results_hw05/: results.csv  results.md
results_hw10/: results.csv  results.md
results_hw20/: results.csv  results.md
results_hw40/: results.csv  results.md
results_hw60/: results.csv  results.md
results_hw80/: results.csv  results.md
speech_base/: base.py
tests/: test_glossary.py  test_metrics.py  test_normalize.py  test_report.py  test_run_matrix.py  test_visualize.py
